@@ -5,6 +5,9 @@ version 2.5.6 (??/??/2009):
 	* Improve sleep behavior by aggregation of longer timeouts on second
 	  boundaries to allow better power saving.  (Arunan Balasubramaniam)
 	* Fix various crashes on exit.
+	* Make XML parsing more resilient to interactions with other libraries.
+	  This, along with the fix for libxml2 bug 564217, fixes the crashes
+	  on connect in XMPP with recent gst-plugins-bad (see #8830 for details).
 
 	IRC:
 	* Correctly handle WHOIS for users who are joined to a large number of
